[package]
name = "webring-cgi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1

[dependencies]
qstring = "0.7.2"
rand = "0.8.5"
reqwest = { version = "0.11.13", features = ["blocking"] }
thiserror = "1.0.40"
url = "2.3.1"
